--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@hookform/resolvers": "^5.2.1",
     "@supabase/supabase-js": "^2.53.0",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "framer-motion": "^12.23.12",
     "keen-slider": "^6.8.6",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
-    "sib-api-v3-sdk": "^8.5.0",
     "simplex-noise": "^4.0.3",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
