--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "simplex-noise": "^4.0.3",
+    "stripe": "^18.4.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.14"
