--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@supabase/supabase-js": "^2.53.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "framer-motion": "^12.23.12",
